<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Galaxy Nexus Settings</string>

    <!-- Page Headers -->
    <string name="general_title">GENERAL</string>
    <string name="display_title">DISPLAY</string>

    <string name="category_cpu_title">CPU</string>
    <string name="category_screen_title">WM8994 Settings ( voodoo )</string>
    <string name="color_tuning_title_head">Color Multipliers Tuning</string>
    <string name="color_tuning_summary_head">Calibrate multipliers screen color</string>
    <string name="gamma_tuning_title_head">Color Gamma Tuning</string>
    <string name="gamma_tuning_summary_head">Calibrate gamma color correction</string>
    <string name="color_hack_presets_title_head">Color hack presets</string>
    <string name="color_hack_presets_summary_head">Presets for gamma and multipliers tested by some users</string>
    <string name="color_red_title">Red</string>
    <string name="color_green_title">Green</string>
    <string name="color_blue_title">Blue</string>
    <string name="gamma1_title">Default</string>
    <string name="gamma2_title">CM Sett.</string>
    <string name="gamma3_title">Natural</string>
    <string name="color1_title">Default</string>
    <string name="color2_title">CM Sett.</string>
    <string name="color3_title">Natural</string>
    <string name="color_warning">Values higher than 200 are not recommended</string>
    <string name="gamma_dss_title">DSS Gamma Set.</string>

    <string name="category_hardware_title">CPU</string>
    <string name="vibrator_tuning_title_head">Vibrator feedback tuning</string>
    <string name="vibrator_tuning_summary_head">Controls the default power of vibrator feedback</string>

    <string name="vibrator_title">Vibration %</string>
    <string name="vibrator_default_title">Default</string>
    <string name="vibrator_test_title">Test</string>

    <string name="preset1_default_title">Default</string>
    <string name="preset2_default_title">Maximum</string>
    <string name="preset3_default_title">Real</string>
    <string name="preset4_default_title">Warm</string>
    <string name="preset5_default_title">Dark Cold</string>
    <string name="preset6_default_title">Natural</string>
    <string name="credits_presets">Credits: ale.landra91, cpaixao, provolinoo</string>

    <string name="category_touchkey_title">Touch Keys</string>
    <string name="touchkey_notification_title_head">Backlight Notifications</string>
    <string name="touchkey_notification_summary_head">The touch key backlights will turn on when there is a notification</string>

    <string name="category_radio_title">Radio</string>
    <string name="hspa_title_head">HSPA</string>
    <string name="hspa_summary_head">Enable HSDPA/HSUPA</string>

    <string name="category_speed_title">GPU</string>
    <string name="category_gpu_title">GPU</string>
    <string name="gpu_overclock_title">Clock Speed</string>

</resources>
