<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingBottom="20dip">

        <TextView android:id="@+id/gamma_red_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_red_title"
                android:paddingTop="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />
        <TextView android:id="@+id/gamma_red_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingTop="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />
        <SeekBar android:id="@+id/gamma_red_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/gamma_red_text"
                android:paddingTop="2dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />

        <TextView android:id="@+id/gamma_green_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/gamma_red_seekbar"
                android:text="@string/color_green_title"
                android:paddingTop="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />
        <TextView android:id="@+id/gamma_green_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/gamma_red_seekbar"
                android:layout_alignParentRight="true"
                android:paddingTop="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />
        <SeekBar android:id="@+id/gamma_green_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/gamma_green_text"
                android:paddingTop="2dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />

        <TextView android:id="@+id/gamma_blue_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/gamma_green_seekbar"
                android:text="@string/color_blue_title"
                android:paddingTop="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />
        <TextView android:id="@+id/gamma_blue_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/gamma_green_seekbar"
                android:layout_alignParentRight="true"
                android:paddingTop="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />
        <SeekBar android:id="@+id/gamma_blue_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/gamma_blue_text"
                android:paddingTop="2dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />

        <TextView android:id="@+id/gamma_dss_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/gamma_blue_seekbar"
                android:text="@string/gamma_dss_title"
                android:paddingTop="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />
        <TextView android:id="@+id/gamma_dss_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/gamma_blue_seekbar"
                android:layout_alignParentRight="true"
                android:paddingTop="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />
        <SeekBar android:id="@+id/gamma_dss_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/gamma_dss_text"
                android:paddingTop="2dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />

        <ImageView android:id="@+id/black_scale_picture"
                android:src="@drawable/color_tuning_preview"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_below="@id/gamma_dss_seekbar"
                android:paddingTop="20dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_below="@+id/black_scale_picture" >

            <Button
                android:id="@+id/btnGamma1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gamma1_title"
                android:textSize="12dp"
                android:width="100dp"/>

            <Button
                android:id="@+id/btnGamma2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gamma2_title"
                android:textSize="12dp"
                android:width="100dp"/>

            <Button
                android:id="@+id/btnGamma3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gamma3_title"
                android:textSize="12dp"
                android:width="100dp"/>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>
